# mcppython

./: pyproject.toml
src/: cat_fact.py
