[project]
name = "python-mcp"
version = "0.1.0"
description = "A working example to create a FastAPI server with SSE-based MCP support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.0.0",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "uvicorn>=0.34.2",
]


[project.scripts]
start = "server:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
